# 2048-incremental

./: Cargo.toml  index.html  input.css  tailwind-6f24a5d649e55b57.css  tailwind.config.js  tailwind.css  twentyfourtyeight-incremental-4bfe7477b8dca258.js
src/: autoaction.rs  brainfuck.rs  condition.rs  connect_four.rs  hangman.rs  main.rs  maze.rs  model.rs  number.rs  points.rs  rubix.rs  sidebar.rs  slider.rs  snake.rs  sokoban.rs  stats.rs  sudoku.rs  twentyfourtyeight.rs  upgrade.rs  upgrade_button.rs  upgrades.rs
