[package]
name = "leet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
itertools = "0.10.3"
rand = {version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
yew = "0.19.3"
wasm-logger = "0.2.0"
log = "0.4.17"
#termion = "1.5.6"
